wuhu/prod/bililive-go/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bililive-go-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bililive-go
  template:
    metadata:
      labels:
        app: bililive-go
    spec:
      containers:
      - name: bililive-go
        image: chigusa/bililive-go
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-writable
          mountPath: /etc/bililive-go
        - name: srv-bililive-volume
          mountPath: /srv/bililive # 将新的 PVC 挂载到 /srv/bililive
      volumes:
      - name: config-volume
        configMap:
          name: config-map
      - name: config-writable
        emptyDir: {}
      - name: srv-bililive-volume
        persistentVolumeClaim:
          claimName: bililive-go-pvc
