wuhu/prod/bililive-go/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bililive-go-service
spec:
  selector:
    app: bililive-go
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
